<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_name"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_name"
                android:padding="4dp"
                android:id="@+id/item_quantity2"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_quantity2"
                android:padding="4dp"
                android:id="@+id/item_color"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_color"
                android:padding="4dp"
                android:id="@+id/item_size"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_size"
                android:padding="4dp"
                android:id="@+id/item_date"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:textSize="18sp"/>

            <TableRow
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/item_date">

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/editvalue"
                    android:background="@android:drawable/ic_menu_edit"
                    />
                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/deletevalue"
                    android:background="@android:drawable/ic_delete"
                    />





            </TableRow>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>